Added proto files

--- a/Docker/base/Dockerfile
+++ b/Docker/base/Dockerfile
@@ -74,7 +74,8 @@ RUN apt-get install --no-install-recommends -y git doxygen graphviz build-essent
 RUN cd /opt && \
     git clone --recursive git://github.com/continental/ecal.git && \
     cd ecal && mkdir build_ &&  cd build_ && \
-    cmake .. -DCMAKE_BUILD_TYPE=Release -DECAL_THIRDPARTY_BUILD_PROTOBUF=OFF -DHAS_QT5=OFF
+    cmake .. -DCMAKE_BUILD_TYPE=Release -DECAL_THIRDPARTY_BUILD_PROTOBUF=OFF -DHAS_QT5=OFF && \
+    make -j16
 
 COPY xivo.sh /tmp/  
 RUN chmod u+x /tmp/xivo.sh
