--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,12 @@ add_definitions(-DNDEBUG)
 
 find_package(OpenCV REQUIRED)
 find_package(realsense2 REQUIRED)
-find_package(OpenGL)
 find_package(Protobuf REQUIRED)
+find_package(eCAL REQUIRED)
+find_package(OpenGL)
 add_subdirectory(${XIVO_DIR} build)
 
-PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${PROTO_DIR}/ImageData.proto)
+PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${PROTO_DIR}/ImageData.proto ${PROTO_DIR}/IMUMessage.proto)
 # Print path to generated files
 message ("PROTO_SRCS = ${PROTO_SRCS}")
 message ("PROTO_HDRS = ${PROTO_HDRS}")
@@ -25,7 +26,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 
-set(DEPENDENCIES glfw realsense2-gl ${OPENGL_LIBRARIES} ${DEPENDENCIES} ${libxivo} ${PROTOBUF_LIBRARIES} gflags::gflags) 
+set(DEPENDENCIES glfw realsense2-gl ${OPENGL_LIBRARIES} ${DEPENDENCIES} 
+                 ${libxivo} ${PROTOBUF_LIBRARIES} gflags::gflags eCAL::core) 
 
 link_directories(
     /usr/lib
@@ -60,8 +62,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 add_executable(rs-motion src/rs-motion.cpp)
 add_executable(rs-motion-2 src/rs-motion-2.cpp)
 add_executable(rs-tracker src/rs-tracker.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
+add_executable(rs-test src/rs-test.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
 
 # Link librealsense2 to the target
 target_link_libraries(rs-motion ${realsense2_LIBRARY} ${DEPENDENCIES})
 target_link_libraries(rs-motion-2 ${realsense2_LIBRARY} ${DEPENDENCIES})
 target_link_libraries(rs-tracker ${realsense2_LIBRARY} ${DEPENDENCIES})
+target_link_libraries(rs-test ${realsense2_LIBRARY} ${DEPENDENCIES})
