--- a/config/rspub_default.toml
+++ b/config/rspub_default.toml
@@ -9,22 +9,25 @@ width = 0
 height = 0
 framerate = 200
 format = "6DOF"
+active = true
 
 [[pipeline_streams]]
 device_name = "Intel RealSense D435i"
 stream_name = "Depth"
-width = 640
+width = 848
 height = 480
 framerate = 30
 format = "Z16"
+active = true
 
 [[pipeline_streams]]
 device_name = "Intel RealSense D435i"
 stream_name = "Color"
-width = 640
+width = 848
 height = 480
 framerate = 30
 format = "BGR8"
+active = true
 
 [filters]
 
@@ -48,15 +51,23 @@ format = "BGR8"
   magnitude = 2.0
   hole_fill = 1.0
 
+  [filters.align]
+  active=true
+
 [publish]
 
   [publish.depth]
-  active = false
+  active = true
+  rate = 30
+
+  [publish.color]
+  active = true
   rate = 30
 
   [publish.pointcloud]
   active = true
-  rate = 10
+  color= true
+  rate = 30
 
 
 
