--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,10 +67,13 @@
         "future": "cpp",
         "typeindex": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.ipp": "cpp"
     },
     "python.pythonPath": "/home/jeremy/miniconda3/envs/realsense/bin/python",
     "cSpell.words": [
-        "RSUSB"
+        "RSUSB",
+        "dframe",
+        "intrin"
     ]
 }
