Added RGBD Integration Server

--- a/Docker/base/Dockerfile
+++ b/Docker/base/Dockerfile
@@ -3,6 +3,7 @@
 ARG FROM_IMAGE=ubuntu:bionic
 FROM $FROM_IMAGE
 ARG TARGETPLATFORM
+ARG N_CPUS=18
 
 # setup timezone
 RUN echo 'Etc/UTC' > /etc/timezone && \
@@ -22,6 +23,8 @@ RUN apt-get update && apt-get install -q -y \
 # setup environment
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
+
+RUN echo ${N_CPUS}
     
 # clone source
 ENV MYWS /opt/workspace
@@ -47,7 +50,7 @@ RUN wget -O /opt/cmake-3.15.5.tar.gz https://cmake.org/files/v3.15/cmake-3.15.5.
     rm /opt/cmake-3.15.5.tar.gz && \
     cd /opt/cmake-3.15.5 && \
     ./configure --prefix=/opt/cmake-3.15.5 && \
-    make -j && \
+    make -j${N_CPUS} && \
     make install && \
     rm -rf Source && rm -rf Bootstrap.cmk && rm -rf Tests && rm -rf Utilities
 
@@ -67,7 +70,7 @@ RUN cd /opt && \
     git clone --recursive git://github.com/continental/ecal.git && \
     cd ecal && mkdir build_ &&  cd build_ && \
     cmake .. -DCMAKE_BUILD_TYPE=Release -DECAL_THIRDPARTY_BUILD_PROTOBUF=OFF -DHAS_QT5=OFF -DBUILD_DOCS=OFF -DBUILD_PY_BINDING=ON && \
-    make -j && \
+    make -j${N_CPUS} && \
     cd /opt/ecal/build_ && \
     cpack -G DEB && \
     dpkg -i _deploy/eCAL-* && \
@@ -78,7 +81,7 @@ RUN cd /opt && \
 RUN git clone https://github.com/IntelRealSense/librealsense.git /opt/librealsense && cd /opt/librealsense && git checkout development && \
     mkdir build && cd build && \
     cmake ../ -DFORCE_RSUSB_BACKEND=true -DCMAKE_BUILD_TYPE=release -DBUILD_EXAMPLES=true -DBUILD_GRAPHICAL_EXAMPLES=true -DBUILD_PYTHON_BINDINGS=true && \
-    make -j && \
+    make -j${N_CPUS} && \
     make install && \
     rm -rf /opt/librealsense
 
@@ -94,11 +97,11 @@ RUN ln -s /usr/bin/python3 /usr/bin/python & \
     ln -s /usr/bin/pip3 /usr/bin/pip
 
 # Open 3D Install
-RUN cd /opt && git clone --recursive https://github.com/intel-isl/Open3D && \
+RUN cd /opt && git clone --single-branch --branch jeremy --recursive https://github.com/JeremyBYU/Open3D && \
     cd /opt/Open3D && \
     mkdir build && cd build && \
     cmake ../ -DBUILD_CPP_EXAMPLES=OFF -DENABLE_JUPYTER=OFF -DCMAKE_CXX_STANDARD_LIBRARIES="-lX11 -ldl" && \
-    make -j && \
+    make -j${N_CPUS} && \
     make install && make install-pip-package && \
     rm -rf /opt/Open3D
 
@@ -108,6 +111,15 @@ RUN apt-get install --no-install-recommends -y nano htop
 # Our Project Dependencies
 RUN apt-get install --no-install-recommends -y libgflags-dev libgoogle-glog-dev python3-scipy python3-matplotlib
 RUN pip3 install protobuf
+
+# Visualization
+# RUN apt-get install --no-install-recommends -y x11vnc \
+#     xorg-dev \
+#     xterm \
+#     xvfb
+
+
+# EXPOSE 5920
 
 # setup entrypoint
 COPY ./base_entrypoint.sh /
