--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(OpenGL)
 find_package(gflags REQUIRED)
 find_package(glog) # Docker ubuntu can not find when REQUIRED, but logging still works?!?!?
 # find_package( Eigen3 REQUIRED )
+find_package(Open3D HINTS ${CMAKE_INSTALL_PREFIX}/lib/CMake)
 
 set(PROTO_FILES ${PROTO_DIR}/Common.proto  ${PROTO_DIR}/ImageMessage.proto 
                 ${PROTO_DIR}/PointCloudMessage.proto  ${PROTO_DIR}/IMUMessage.proto 
@@ -36,20 +37,21 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 
-set(DEPENDENCIES glfw realsense2-gl ${OPENGL_LIBRARIES} ${DEPENDENCIES} ${PROTOBUF_LIBRARIES} ${OpenCV_LIBRARIES} gflags glog eCAL::core) 
+set(DEPENDENCIES glfw realsense2-gl ${OPENGL_LIBRARIES} ${DEPENDENCIES} ${PROTOBUF_LIBRARIES} ${Open3D_LIBRARIES} ${OpenCV_LIBRARIES} gflags glog eCAL::core) 
 
 
-# get_cmake_property(_variableNames VARIABLES)
-# list (SORT _variableNames)
-# foreach (_variableName ${_variableNames})
-#     message(STATUS "${_variableName}=${${_variableName}}")
-# endforeach()
+get_cmake_property(_variableNames VARIABLES)
+list (SORT _variableNames)
+foreach (_variableName ${_variableNames})
+    message(STATUS "${_variableName}=${${_variableName}}")
+endforeach()
 
 link_directories(
     /usr/lib
     /usr/lib/x86_64-linux-gnu
     /usr/local/lib
     ${DEPENDENCIES}
+    ${Open3D_LIBRARY_DIRS}
     # ${XIVO_DIR}/thirdparty/gflags/lib
     # ${XIVO_DIR}/thirdparty/glog/lib
     # ${XIVO_DIR}/thirdparty/Pangolin/lib
@@ -70,6 +72,7 @@ include_directories(
     ${PROJECT_SOURCE_DIR}/build
     ${GFLAG_INCLUDE_DIRS}
     ${toml11_SOURCE_DIR}
+    ${Open3D_INCLUDE_DIRS}
 )
 
 
@@ -83,12 +86,14 @@ add_executable(rs-motion-2 src/rs-motion-2.cpp)
 add_executable(rs-test src/rs-test.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
 add_executable(rs-pub src/rs-pub.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
 add_executable(rs-save src/rs-save.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
+add_executable(rs-integrate-server src/rs-integrate-server.cpp src/utility.cpp ${PROTO_SRCS} ${PROTO_HDRS})
 
 # Link librealsense2 to the target
 target_link_libraries(rs-motion-2 ${realsense2_LIBRARY} ${DEPENDENCIES})
 target_link_libraries(rs-test ${realsense2_LIBRARY} ${DEPENDENCIES}) 
 target_link_libraries(rs-pub ${realsense2_LIBRARY} ${DEPENDENCIES})
 target_link_libraries(rs-save ${realsense2_LIBRARY} ${DEPENDENCIES})
+target_link_libraries(rs-integrate-server ${realsense2_LIBRARY} ${DEPENDENCIES} )
 
 add_custom_target(DUMMY_TARGET ALL 
                   DEPENDS ${PY_SOURCES})
