--- a/config/rsintegrate_default.toml
+++ b/config/rsintegrate_default.toml
@@ -2,4 +2,10 @@ name = "Integration Server Settings"
 min_translate_change = 0.10 # meters
 min_rotation_change= 10.0 # degrees
 
+[scalable_tsdf]
+voxel_length= 0.03125
+sdf_trunc= 0.08
+depth_sampling_stride= 4
+color_type= 1 # None, Color, Gray
+
 
